panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__include__split-if-directive__test_error_if_true.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/include/split-if-directive/test_error_if_true.c
---
success: true
exit_code: 0
----- stdout -----
int puts(char const*);



int main() {
    puts("it works");
}

----- stderr -----
